--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
     "compile": "./node_modules/.bin/babel ./src -d ./compiled",
-    "build2":
-      "NODE_ENV=production webpack --env production --config ./webpack.config.prod.js"
+    "build2": "NODE_ENV=production webpack --env production --config ./webpack.config.prod.js"
   },
-  "keywords": ["react"],
+  "keywords": [
+    "react"
+  ],
   "author": {
     "name": "Rong Zhuang",
     "email": "jojozhuang@gmail.com"
@@ -25,13 +26,13 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "express": "^4.16.2",
-    "npm-run-all": "^4.1.3",
-    "react": "^16.4.2",
+    "express": "^4.17.1",
+    "npm-run-all": "^4.1.5",
+    "react": "^16.8.6",
     "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.4.2",
-    "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4",
+    "react-dom": "^16.8.6",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "styled-components": "^2.4.0"
   },
   "devDependencies": {
@@ -42,16 +43,18 @@
     "babel-preset-react-hmre": "^1.1.1",
     "clean-webpack-plugin": "^0.1.19",
     "eslint": "^4.19.1",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-watch": "^3.1.5",
     "eventsource-polyfill": "^0.9.6",
     "html-webpack-plugin": "^3.2.0",
     "serve-favicon": "^2.5.0",
-    "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.3"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "lodash": "^4.17.11",
+    "fstream": "1.0.12"
   },
   "engines": {
     "node": "~0.10.0 || ~0.12.0 || ~9.4.0"
