--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
     "eslint-plugin-react": "^7.13.0",
     "eslint-watch": "^3.1.5",
     "eventsource-polyfill": "^0.9.6",
+    "fstream": "1.0.12",
     "html-webpack-plugin": "^3.2.0",
-    "serve-favicon": "^2.5.0",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-hot-middleware": "^2.25.0",
     "lodash": "^4.17.11",
-    "fstream": "1.0.12"
+    "serve-favicon": "^2.5.0",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "engines": {
     "node": "~0.10.0 || ~0.12.0 || ~9.4.0"
